# rusty-redtail

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  kiwitest  mate6
.github/workflows/: ci.yml  engine-test.yml
benches/: cutoff.rs  evaluate.rs  movegen.rs
src/: .movegen.rs.rustfmt  bitboard.rs  board.rs  chess.rs  evaluation.rs  lib.rs  main.rs  movegen.rs  pst.rs  pv.rs  search.rs  skaak.rs  tt.rs  uci.rs  utils.rs
src/board/: attacks.rs  constants.rs
src/chess/: _move.rs  castling_rights.rs  color.rs  constants.rs  piece.rs  square.rs
src/search/: constants.rs  evaluate.rs  options.rs  pv.rs  thread.rs  utils.rs
src/skaak/: ._move.rs.rustfmt  _move.rs
src/testdata/: pawns.json
