[package]
name = "redtail"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
fxhash = "0.2.1"

serde_json = "1.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "movegen"
harness = false

[[bench]]
name = "evaluate"
harness = false

[profile.release]
codegen-units = 1
panic = "abort"
lto = "fat"
